# DARNtids

./: .gitignore  CONTRIBUTING.md  README.md  classify_mstid_list.py  environment.yml  plot_rtp_summary.py  pyproject.toml  run_DARNtids.py  run_single_event.py
darntids/: __init__.py  calendar_plot.py  more_music.py  test.py
deprecate/: mstid_index.py  music_and_classify.py  music_and_classify_test.py  music_and_classify_year_loop_gsmr_fitexfilt.py  plot_calendar.py
docs/: configuration.md  examples.md  installation.md  pipeline.md
webserver/: stats.py
