[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mstid"
version = "0.1"
description = "SuperDARN Traveling Ionospheric Disturbance Analysis Toolkit"
authors = [
    {name = "Nathaniel A. Frissell", email = "nathaniel.frissell@scranton.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "sshtunnel",
    "sh",
    "ephem",
    "pymongo",
]

[project.urls]
Homepage = "https://hamsci.org"

[tool.setuptools.packages.find]
where = ["."]
include = ["mstid*"]
