[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darntids"
version = "0.1.0"
description = "SuperDARN Traveling Ionospheric Disturbance Analysis Toolkit"
authors = [
    {name = "Nathaniel A. Frissell", email = "nathaniel.frissell@scranton.edu"}
]
maintainers = [
    {name = "Nathaniel A. Frissell", email = "nathaniel.frissell@scranton.edu"}
]
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
keywords = [
    "SuperDARN",
    "MSTID",
    "TID",
    "ionosphere",
    "radar",
    "space weather",
    "atmospheric gravity waves",
    "traveling ionospheric disturbances",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pandas",
    "sshtunnel",
    "sh",
    "ephem",
    "pymongo",
    "pyDARNmusic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/w2naf/DARNtids"
Documentation = "https://github.com/w2naf/DARNtids#readme"
Repository = "https://github.com/w2naf/DARNtids.git"
Issues = "https://github.com/w2naf/DARNtids/issues"

[tool.setuptools]
packages = ["darntids"]
